feat: KMA API 전축 반영·캠페인 Lv1-10·3D 재난 VFX
기상청 10종 데이터를 점수/시나리오에 연동하고, 10단계 교육 캠페인·3D 재난 연출·가이드 데모·ClimateInfluenceService를 추가한다.

Co-authored-by: Cursor <cursoragent@cursor.com>